# ci_cd-diabetes-predictor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: model.py
tests/: test_model.py
